add context of who is using the app the appData, only allow Donor to update LPA details

--- a/web/template/certificate_provider_read_the_lpa.gohtml
+++ b/web/template/certificate_provider_read_the_lpa.gohtml
@@ -14,7 +14,7 @@
         {{ tr .App "lpaDecisions" }}
       </h2>
 
-      {{ template "lpa-decisions" (lpaDecisions .App false .Lpa) }}
+      {{ template "lpa-decisions" . }}
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-2">
         {{ tr .App "peopleNamedOnTheLpa" }}
