--- a/web/template/layout/lpa-decisions.gohtml
+++ b/web/template/layout/lpa-decisions.gohtml
@@ -17,7 +17,7 @@
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-                {{ if .DonorIsViewing }}
+                {{ if .App.IsDonor }}
                     {{ tr .App "whenYourAttorneysCanUseYourLpa" }}
                 {{ else}}
                     {{ tr .App "whenAttorneysCanUseTheLpa" }}
@@ -26,7 +26,7 @@
             <dd class="govuk-summary-list__value">
                 {{ tr .App .Lpa.WhenCanTheLpaBeUsed }}
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.WhenCanTheLpaBeUsed }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "whenYourAttorneysCanUseYourLpa" }}</span>
@@ -37,7 +37,7 @@
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-                {{ if .DonorIsViewing }}
+                {{ if .App.IsDonor }}
                     {{ trCount .App "whoAreYourAttorneys" (len .Lpa.Attorneys) }}
                 {{ else}}
                     {{ trCount .App "theirAttorneys" (len .Lpa.Attorneys) }}
@@ -46,7 +46,7 @@
             <dd class="govuk-summary-list__value">
                 {{ .Lpa.Attorneys.FullNames }}
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.ChooseAttorneys }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourAttorneys" }}</span>
@@ -58,7 +58,7 @@
         {{ if gt (len .Lpa.Attorneys) 1 }}
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    {{ if .DonorIsViewing }}
+                    {{ if .App.IsDonor }}
                         {{ tr .App "howYourAttorneysMustMakeDecisions" }}
                     {{ else}}
                         {{ tr .App "howAttorneysMustMakeDecisions" }}
@@ -67,7 +67,7 @@
                 <dd class="govuk-summary-list__value">
                     {{ trHtml .App .Lpa.HowAttorneysMakeDecisions }}
                 </dd>
-                {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+                {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                     <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="{{ link .App .App.Paths.HowShouldAttorneysMakeDecisions }}">
                             {{ tr .App "change" }}<span class="govuk-visually-hidden">{{ .Lpa.HowAttorneysMakeDecisionsDetails }}</span>
@@ -79,7 +79,7 @@
 
         <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-                {{ if .DonorIsViewing }}
+                {{ if .App.IsDonor }}
                     {{ trCount .App "whoAreYourReplacementAttorneys" (len .Lpa.ReplacementAttorneys) }}
                 {{ else}}
                     {{ trCount .App "theirReplacementAttorneys" (len .Lpa.ReplacementAttorneys) }}
@@ -92,7 +92,7 @@
                     {{ .Lpa.ReplacementAttorneys.FullNames }}
                 {{ end }}
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.ChooseReplacementAttorneys }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden">{{ tr .App "yourReplacementAttorneys" }}</span>
@@ -108,7 +108,7 @@
             <dd class="govuk-summary-list__value">
                 <p class="govuk-body">{{ .Lpa.Restrictions }}</p>
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.Restrictions }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden">  {{ tr .App "yourRestrictions" }}</span>
