--- a/web/template/check_your_lpa.gohtml
+++ b/web/template/check_your_lpa.gohtml
@@ -15,7 +15,7 @@
         {{ tr .App "lpaDecisions" }}
       </h2>
 
-      {{ template "lpa-decisions" (lpaDecisions .App true .Lpa) }}
+      {{ template "lpa-decisions" . }}
 
       <h2 class="govuk-heading-l govuk-!-margin-bottom-2">
         {{ tr .App "peopleNamedOnTheLpa" }}
