--- a/web/template/layout/attorney-summary.gohtml
+++ b/web/template/layout/attorney-summary.gohtml
@@ -14,7 +14,7 @@
                 <dd class="govuk-summary-list__value">
                     {{ $a.FirstNames }} {{ $a.LastName }}
                 </dd>
-                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                     <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="{{ link $.App $.DetailsPath }}&id={{ .ID }}#f-first-names">
                             {{ trFormatHtml $.App "changeNameLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
@@ -29,7 +29,7 @@
                 <dd class="govuk-summary-list__value">
                     {{ formatDate $a.DateOfBirth }}
                 </dd>
-                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                     <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="{{ link $.App $.DetailsPath }}&id={{ .ID }}#f-date-of-birth">
                             {{ trFormatHtml $.App "changeDOBLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
@@ -44,7 +44,7 @@
                 <dd class="govuk-summary-list__value">
                     {{ $a.Email }}
                 </dd>
-                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                     <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="{{ link $.App $.DetailsPath }}&id={{ .ID }}#f-email">
                             {{ trFormatHtml $.App "changeEmailLinkText" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
@@ -63,7 +63,7 @@
                     {{ if $a.Address.TownOrCity }}{{ $a.Address.TownOrCity }}<br>{{end}}
                     {{ $a.Address.Postcode }}
                 </dd>
-                {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+                {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                     <dd class="govuk-summary-list__actions">
                         <a class="govuk-link" href="{{ link $.App $.AddressPath }}&id={{ .ID }}#f-address-line-1">
                             {{ trFormatHtml $.App "changeAddressLink" "FirstNames" $a.FirstNames "LastName" $a.LastName }}
@@ -73,7 +73,7 @@
             </div>
         </dl>
 
-        {{ if not (eq $.Lpa.Tasks.CheckYourLpa.String "completed") }}
+        {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
             <div class="govuk-grid-row" id="remove-{{ $.AttorneyType }}-{{ $attorneyNumber }}">
                 <div class="govuk-grid-column-full">
                     <div class="app-float-right">
