--- a/web/template/layout/certificate-provider-details.gohtml
+++ b/web/template/layout/certificate-provider-details.gohtml
@@ -7,7 +7,7 @@
             <dd class="govuk-summary-list__value">
                 {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
@@ -23,7 +23,7 @@
             <dd class="govuk-summary-list__value">
                 {{ .Lpa.CertificateProvider.Mobile }}
             </dd>
-            {{ if not (eq .Lpa.Tasks.CheckYourLpa.String "completed") }}
+            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
                 <dd class="govuk-summary-list__actions">
                     <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
                         {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderMobile" }}</span>
