--- a/web/template/certificate_provider_your_details.gohtml
+++ b/web/template/certificate_provider_your_details.gohtml
@@ -10,7 +10,7 @@
         <h1 class="govuk-heading-xl">{{ tr .App "yourDetails" }}</h1>
 
         <h2 class="govuk-heading-m">{{ tr .App "donor" }}</h2>
-        <p class="govuk-body">{{ .Lpa.You.FullName }}</p>
+        <p class="govuk-body">{{ .Lpa.Donor.FullName }}</p>
 
         <h2 class="govuk-heading-m">{{ tr .App "yourDetails" }}</h2>
         <p class="govuk-body">{{ .Lpa.CertificateProvider.FullName }}</p>
