--- a/web/template/witnessing_as_certificate_provider.gohtml
+++ b/web/template/witnessing_as_certificate_provider.gohtml
@@ -10,7 +10,7 @@
       <form novalidate method="post">
         <div class="moj-ticket-panel">
           <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
-            {{ $enterUniqueCodeHint := trFormat .App "enterUniqueCodeHint" "CpFirstName" .Lpa.CertificateProvider.FirstNames "DonorFullName" .Lpa.You.FullName }}
+            {{ $enterUniqueCodeHint := trFormat .App "enterUniqueCodeHint" "CpFirstName" .Lpa.CertificateProvider.FirstNames "DonorFullName" .Lpa.Donor.FullName }}
             {{ template "input" (input . "witness-code" "enterUniqueCodeLabel" .Form.Code "hint" $enterUniqueCodeHint "classes" "govuk-input--width-5" "autocomplete" "off") }}
           </div>
         </div>
