add additional translation and update donor ptn key

--- a/web/template/choose_people_to_notify_summary.gohtml
+++ b/web/template/choose_people_to_notify_summary.gohtml
@@ -1,11 +1,11 @@
 {{ template "page" . }}
 
-{{ define "pageTitle" }}{{ tr .App "peopleToNotify" }}{{ end }}
+{{ define "pageTitle" }}{{ tr .App "peopleToNotifyAboutYourLpa" }}{{ end }}
 
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">{{ tr .App "peopleToNotify" }}</h1>
+      <h1 class="govuk-heading-xl">{{ tr .App "peopleToNotifyAboutYourLpa" }}</h1>
 
       {{ trHtml .App "weCanNotifyUpTo5PeopleContent" }}
 
