--- a/web/template/layout/certificate-provider-details.gohtml
+++ b/web/template/layout/certificate-provider-details.gohtml
@@ -1,35 +1,40 @@
 {{ define "certificate-provider-details" }}
-    <dl class="govuk-summary-list">
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                {{ tr .App "name" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-                {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
-            </dd>
-            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
-                        {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
-                    </a>
-                </dd>
-            {{ end }}
-        </div>
+  <dl class="govuk-summary-list">
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        {{ tr .App "name" }}
+      </dt>
+      <dd class="govuk-summary-list__value">
+        {{ .Lpa.CertificateProvider.FirstNames }} {{ .Lpa.CertificateProvider.LastName }}
+      </dd>
+      {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
+            {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ lowerFirst (tr .App "certificateProvider") }}</span>
+          </a>
+        </dd>
+      {{ end }}
+      {{ if .Lpa.CertificateProviderIdentityConfirmed }}
+        <dd class="govuk-summary-list__value">
+          <strong class="govuk-tag app-task-list__tag govuk-tag">{{ tr .App "idVerifiedTag" }}</strong>
+        </dd>
+      {{ end }}
+    </div>
 
-        <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-                {{ tr .App "mobile" }}
-            </dt>
-            <dd class="govuk-summary-list__value">
-                {{ .Lpa.CertificateProvider.Mobile }}
-            </dd>
-            {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
-                <dd class="govuk-summary-list__actions">
-                    <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
-                        {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderMobile" }}</span>
-                    </a>
-                </dd>
-            {{ end }}
-        </div>
-    </dl>
+    <div class="govuk-summary-list__row">
+      <dt class="govuk-summary-list__key">
+        {{ tr .App "mobile" }}
+      </dt>
+      <dd class="govuk-summary-list__value">
+        {{ .Lpa.CertificateProvider.Mobile }}
+      </dd>
+      {{ if and (not $.Lpa.Tasks.ConfirmYourIdentityAndSign.Completed) $.App.IsDonor }}
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="{{ link .App .App.Paths.CertificateProviderDetails }}">
+            {{ tr .App "change" }}<span class="govuk-visually-hidden"> {{ tr .App "certificateProviderMobile" }}</span>
+          </a>
+        </dd>
+      {{ end }}
+    </div>
+  </dl>
 {{ end }}
