Match date of birth returned from identity provider

--- a/web/template/identity_with_yoti_callback.gohtml
+++ b/web/template/identity_with_yoti_callback.gohtml
@@ -28,10 +28,26 @@
         <dl class="govuk-summary-list">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
-              Full Name
+              First Names
             </dt>
             <dd class="govuk-summary-list__value">
-              {{ .FullName }}
+              {{ .FirstNames }}
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              LastName
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ .LastName }}
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Date of birth
+            </dt>
+            <dd class="govuk-summary-list__value">
+              {{ .DateOfBirth }}
             </dd>
           </div>
           <div class="govuk-summary-list__row">
