--- a/web/template/certificate_provider_your_details.gohtml
+++ b/web/template/certificate_provider_your_details.gohtml
@@ -13,7 +13,7 @@
 
         {{ template "warning" (warning .App "18OrOverWarning") }}
 
-        {{ template "input" (input . "mobile" "Enter your UK mobile number" .Form.Mobile "context" "enterYourUkMobileContext" "hint" "enterYourUkMobileHint" "classes" "govuk-input--width-20 govuk-!-margin-bottom-6" "type" "tel" "autocomplete" "tel") }}
+        {{ template "input" (input . "mobile" "yourUkMobile" .Form.Mobile "context" "enterYourUkMobileContext" "hint" "enterYourUkMobileHint" "classes" "govuk-input--width-20 govuk-!-margin-bottom-6" "type" "tel" "autocomplete" "tel") }}
 
         {{ template "continue-button" . }}
 
