--- a/web/template/certificate_provider_enter_mobile.gohtml
+++ b/web/template/certificate_provider_enter_mobile.gohtml
@@ -1,17 +1,13 @@
 {{ template "page" . }}
 
 {{ define "serviceName" }}{{ tr .App "beACertificateProvider" }}{{ end }}
-{{ define "pageTitle" }}{{ tr .App "enterYourDetails" }}{{ end }}
+{{ define "pageTitle" }}{{ tr .App "enterYourMobileNumber" }}{{ end }}
 
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <form novalidate method="post">
-        <h1 class="govuk-heading-xl">{{ tr .App "enterYourDetails" }}</h1>
-
-        {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
-
-        {{ template "warning" (warning .App "18OrOverWarning") }}
+        <h1 class="govuk-heading-xl">{{ tr .App "enterYourMobileNumber" }}</h1>
 
         {{ template "input" (input . "mobile" "yourUkMobile" .Form.Mobile "context" "enterYourUkMobileContext" "hint" "enterYourUkMobileHint" "classes" "govuk-input--width-20 govuk-!-margin-bottom-6" "type" "tel" "autocomplete" "tel") }}
 
