fix block for over 100s

--- a/web/template/certificate_provider_enter_date_of_birth.gohtml
+++ b/web/template/certificate_provider_enter_date_of_birth.gohtml
@@ -11,6 +11,8 @@
 
         {{ template "date" (input . "date-of-birth" "dateOfBirth" .Form.Dob "hint" "dateOfBirthHint") }}
 
+        {{ template "dob-warning" . }}
+
         {{ template "warning" (warning .App "18OrOverWarning") }}
 
         {{ template "continue-button" . }}
