--- a/web/template/certificate_provider_what_happens_next.gohtml
+++ b/web/template/certificate_provider_what_happens_next.gohtml
@@ -7,7 +7,7 @@
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">{{ tr .App "whatHappensNext" }}</h1>
 
-      {{ trFormatHtml .App "whatHappensNextContent" "DonorFullName" .Lpa.Donor.FullName }}
+      {{ trFormatHtml .App "whatHappensNextContent" "DonorFullName" .Lpa.Donor.FullName "DonorFirstNames" .Lpa.Donor.FirstNames }}
     </div>
   </div>
 {{ end }}
