--- a/web/template/choose_replacement_attorneys_address.gohtml
+++ b/web/template/choose_replacement_attorneys_address.gohtml
@@ -18,9 +18,15 @@
             {{ template "input" (input . "address-town" "townOrCity" .Form.Address.TownOrCity "classes" "govuk-!-width-two-thirds" "autocomplete" "address-level1") }}
             {{ template "input" (input . "address-postcode" "postcode" .Form.Address.Postcode "classes" "govuk-input--width-10" "autocomplete" "postal-code") }}
 
-            <button name="action" value="manual" class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">
-              {{ tr .App "continue" }}
-            </button>
+            <div class="govuk-button-group">
+              <button name="action" value="manual" class="govuk-button govuk-!-margin-top-6" data-module="govuk-button">
+                {{ tr .App "continue" }}
+              </button>
+
+              <button name="action" value="skip" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                {{ tr .App "skip" }}
+              </button>
+            </div>
 
           {{ else if .Addresses }}
             <input type="hidden" name="lookup-postcode" value="{{ .Form.LookupPostcode }}" />
@@ -44,9 +50,15 @@
               </a>
             </p>
 
-            <button name="action" value="select" class="govuk-button" data-module="govuk-button">
-              {{ tr .App "continue" }}
-            </button>
+            <div class="govuk-button-group">
+              <button name="action" value="select" class="govuk-button" data-module="govuk-button">
+                {{ tr .App "continue" }}
+              </button>
+
+              <button name="action" value="skip" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                {{ tr .App "skip" }}
+              </button>
+            </div>
 
           {{ else }}
             <div id="find" class="govuk-form-group govuk-!-margin-bottom-6  {{ if .Errors.Has "lookup-postcode" }}govuk-form-group--error{{ end }}">
@@ -63,9 +75,15 @@
               </a>
             </p>
 
-            <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
-              {{ tr .App "findAddress" }}
-            </button>
+            <div class="govuk-button-group">
+              <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
+                {{ tr .App "findAddress" }}
+              </button>
+
+              <button name="action" value="skip" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                {{ tr .App "skip" }}
+              </button>
+            </div>
           {{ end }}
         </fieldset>
 
