--- a/web/template/use_existing_address.gohtml
+++ b/web/template/use_existing_address.gohtml
@@ -10,13 +10,13 @@
             </h1>
 
             <form novalidate method="post">
-                <div class="govuk-form-group {{ if .Errors.Has "is-name-correct" }}govuk-form-group--error{{ end }} govuk-!-margin-bottom-6">
+                <div class="govuk-form-group {{ if .Errors.Has "address-index" }}govuk-form-group--error{{ end }} govuk-!-margin-bottom-6">
                     <fieldset class="govuk-fieldset">
-                        <div class="govuk-radios {{ if .Errors.Has "is-name-correct" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
+                        <div class="govuk-radios {{ if .Errors.Has "address-index" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
                             {{ range $i, $a := .Addresses }}
                                 {{ if not (eq $.Subject.ID $a.ID) }}
                                     <div class="govuk-radios__item">
-                                        <input class="govuk-radios__input" id="f-address-{{ $i }}" name="address" type="radio" value="{{ $i }}">
+                                        <input class="govuk-radios__input" id="f-address-{{ $i }}" name="address-index" type="radio" value="{{ $i }}">
                                         <label class="govuk-label govuk-radios__label" for="f-address-{{ $i }}">
                                             {{ $a.Name }} ({{ $a.Role }}) {{ $a.Address }}
                                         </label>
